<resources>
    <string name="app_name">forest</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="event_icon">Event Icon</string>
    <string name="date_icon">Date Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="product_icon">Product Icon</string>
    <string name="quantity_icon">Quantity Icon</string>
    <string name="price_icon">Price Icon</string>

</resources>