<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addEvent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Please provide details about the recycled product"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/productNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/order"
            android:contentDescription="@string/product_icon" />

        <EditText
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="Product Name"
            android:inputType="text"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/productQuantityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/productNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/quantity"
            android:contentDescription="@string/quantity_icon" />

        <EditText
            android:id="@+id/productQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="Product Quantity"
            android:inputType="number"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/productPriceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/productQuantityLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/price"
            android:contentDescription="@string/price_icon" />

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="Product Price"
            android:inputType="numberDecimal"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/productLocationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/productPriceLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/location"
            android:contentDescription="@string/location_icon" />

        <EditText
            android:id="@+id/productLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="Product Location"
            android:inputType="text"
            android:padding="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_upload_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="UPLOAD IMAGE"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4CAF50"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/productLocationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/uploaded_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/button_upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/submitProduct"
        app:layout_constraintHeight_percent="0.3"
        android:contentDescription="@string/uploaded_image" />

    <Button
        android:id="@+id/submitProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4CAF50"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/uploaded_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
